--- a/style.css
+++ b/style.css
@@ -9,11 +9,16 @@ body {
   color: #fff;
   line-height: 1.6;
   height: 100vh;
+  /* overflow: hidden; */
 }
 
 .container {
   width: 100%;
   height: 100%;
+  /* CSS-based smooth scrolling */
+  /* overflow-y: scroll;
+  scroll-behavior: smooth;
+  scroll-snap-type: y mandatory; */
 }
 
 .navbar {
@@ -55,6 +60,7 @@ section {
   text-align: center;
   width: 100%;
   height: 100vh;
+  /* scroll-snap-align: center; */
 }
 
 section h1,
